syntax = "proto3";

message Post {
    uint32 id = 1;
    uint32 userId = 2;
    string title = 3;
    string content = 4;
}

message GetAllPostsRequest {}
message GetAllPostsResponse {
    repeated Post posts = 1;
}

message GetPostRequest {
    uint32 id = 1;
}
message GetPostResponse {
    Post post = 1;
}

message CreatePostRequest {
    uint32 userId = 1;
    string title = 2;
    string content = 3;
}
message CreatePostResponse {
    bool ok = 1;
}

message UpdatePostRequest {
    Post post = 1;
}
message UpdatePostResponse {
    Post post = 1;
}

message DeletePostRequest {
    uint32 id = 1;
}
message DeletePostResponse {
    bool ok = 1;
}

service Posts {
    rpc GetAllPosts (GetAllPostsRequest) returns (GetAllPostsResponse);
    rpc GetPost (GetPostRequest) returns (GetPostResponse);
    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
    rpc UpdatePost (UpdatePostRequest) returns (UpdatePostResponse);
    rpc DeletePost (DeletePostRequest) returns (DeletePostResponse);
}